# jiangkeda-stm32f1

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: build.yml
examples/: 10-2-hardware-i2c-mpu6050.rs  3-2-led-running.rs  3-3-buzzer-with-light-sensor.rs  3-3-buzzer.rs  3-4-button-led.rs  4-1-oled-display.rs  5-1-counter-with-ir-sensor.rs  5-2-counter-with-rotary-encoder.rs  6-1-timer-interrupt.rs  6-2-timer-external-clock.rs  6-3-pwm-led-breathing.rs  6-4-pwm-servo.rs  6-5-pwm-dc-motor.rs  6-7-pwm-measure-frequency-and-duty-cycle.rs  6-8-encoder-interface-measure-speed.rs  7-1-adc-single-channel.rs  7-2-adc-multi-channel.rs  8-1-dma-data-transfer.rs  8-2-dma-adc-multi-channel.rs  9-1-usart-communication.rs  9-2-usart-interrupt-rx.rs
src/: main.rs
