[package]
name = "jiangke-stm32f1"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# embedded-hal = "1.0.0"
# nb = "1"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
# cortex-m-semihosting = "0.5.0"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "1.0.0"
# panic-semihosting = "0.6.0"
stm32f1xx-hal = { version = "0.10.0", features = ["stm32f103", "medium"] }

[[example]]
name = "3-1-led"
