[package]
name = "jiangke-stm32f1"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# embedded-hal = "1.0.0"
# nb = "1"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
# cortex-m-semihosting = "0.5.0"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "1.0.0"
rtt-target = "0.5.0"
ssd1306 = "0.9.0"
# panic-semihosting = "0.6.0"
stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal", features = ["stm32f103", "medium"] }

[[example]]
name = "3-1-led" # LED 闪烁

[[example]]
name = "3-2-led-running" # LED 流水灯

[[example]]
name = "3-3-buzzer" # 蜂鸣器

[[example]]
name = "3-4-button-led" # 按键控制 LED

[[example]]
name = "3-5-buzzer-with-light-sensor" # 光敏电阻控制蜂鸣器

[[example]]
name = "4-1-oled-display" # OLED 显示

[[example]]
name = "5-1-counter-with-ir-sensor" # 对射式红外传感器计次

[[example]]
name = "5-2-counter-with-rotary-encoder" # 旋转编码器计次

[[example]]
name = "6-1-timer-interrupt" # 定时器定时中断

[[example]]
name = "6-2-timer-external-clock" # 定时器外部时钟, 未实现

[[example]]
name = "6-3-pwm-led-breathing" # PWM驱动LED呼吸灯

[[example]]
name = "6-4-pwm-servo" # PWM驱动舵机

[[example]]
name = "6-5-pwm-dc-motor" # PWM驱动直流电机

[[example]]
name = "6-6-input-capture-measure-frequency" # 输入捕获模式测频率, 未实现

[[example]]
name = "6-7-pwm-measure-frequency-and-duty-cycle" # PWM模式测频率占空比, 未实现

[[example]]
name = "6-8-encoder-interface-measure-speed" # 编码器接口测速, 读入会卡死
